feat: added web icon

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="//cdn.quilljs.com/1.3.6/quill.snow.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#14B8A6" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>My DiaryFeed</title>
+    <title>Diary</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
