feat: fixed the toolbar'

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Online Diary, made for you 😉"
     />
     <title>Diary</title>
   </head>
